Change eliding priority of progress bar notification.

Previously, if both the title and the message for a progress bar
notification is long enough, the implementation showed the full
text of the title and elided the message by following Android
behavior.

However, in Download notification, it elides "n mins left" text
(See screenshot in the bug), which is not preferable.

This CL changes the behavior to prioritize the message and elide the
title if there is not enough space.

TEST=manual
BUG=789924

Change-Id: I9e8da6c9c53ce1409b6d2d7aa05ae2bd62ca854b